[tool.poetry]
name = "julia"
version = "0.1.0"
description = "Compute Julia fraction. A test repo for python coding optimal practice"
authors = ["jpfustc <pengfei.jiang2018@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.3"
numpy = "^1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
